# 661e44cc-f439-11ea-9bba-7ede567b4b29

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/: sample_input.txt
doc/: About.md  DevelopmentJournal.md  DoxygenLayout.xml  Instructions.md  MainPage.md  TimeKeeping.md
exec/kata_word_search/: CMakeLists.txt
exec/kata_word_search/include/: parser.h  printf_specializations.h
exec/kata_word_search/src/: kata_word_search.c  main.c  parser.c  printf_specializations.c
lib/kata_word_search/: CMakeLists.txt
lib/kata_word_search/include/kata_word_search/: kata_word_search.h  solution.h
lib/kata_word_search/src/: kata_word_search.c  solution.c
lib/kata_word_search/test/: test__kata_word_search.cpp  test__kata_word_search__solution.cpp  test__kata_word_search__user_stories.cpp  test__libkata_word_search.cpp  test__libkata_word_search__user_stories.cpp
lib/word_search/: CMakeLists.txt
lib/word_search/include/word_search/: direction.h  grid.h  grid_coordinates.h  grid_sequence.h  grid_vector.h  solution.h  word_search.h
lib/word_search/src/: direction.c  grid.c  grid_coordinates.c  grid_sequence.c  grid_vector.c  solution.c  word_search.c
lib/word_search/test/: test__libword_search.cpp  test__libword_search__grid.cpp  test__libword_search__grid_coordinates.cpp  test__libword_search__grid_sequence.cpp  test__libword_search__grid_vector.cpp  test__libword_search__performance.cpp  test__libword_search__solution.cpp  test__libword_search__user_stories.cpp  test__word_search__grid.cpp  test__word_search__grid_coordinates.cpp  test__word_search__grid_sequence.cpp  test__word_search__grid_vector.cpp
